# ascii-world

./: .env.example  .gitignore  Cargo.toml  README.md  typescript
.github/workflows/: release-game-cli.yml
assets/: README.md
backend/: Cargo.toml
backend/migrations/: 20260604120000_init.sql  20260604193000_x_login.sql  20260605090000_all_time_tokens.sql  20260605113000_player_sessions.sql
backend/src/: main.rs
cli/: .env.example  .env.production.example  Cargo.toml  build.rs  install.ps1  install.sh
cli/src/: land_mask.rs  main.rs
scripts/: backend-dev.sh  backend-prod.sh  deploy-backend.sh  game-release-cli.sh  gift-lobsters.sh  remote-run-backend.sh  reset-local-data.ps1  reset-local-data.sh
world-render/: Cargo.toml
world-render/src/: lib.rs
