[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
build = "build.rs"

[[bin]]
name = "world"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.29"
dirs = "6.0"
dotenvy = "0.15"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
unicode-width = "0.2"
url = "2.5"
walkdir = "2.5"
webbrowser = "1.0"
